--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,43 +1,19 @@
-# ============================
-# 🏗️ Etapa 1: Build
-# ============================
 FROM node:20-alpine AS builder
-
-# Crear directorio de la app
 WORKDIR /app
-
-# Copiar package.json y lock (si existe)
 COPY package*.json ./
-
-# Instalar dependencias (incluye devDependencies para compilar)
 RUN npm install
-
-# Copiar el resto del código fuente
 COPY . .
-
-# Generar cliente Prisma y compilar TypeScript
 RUN npx prisma generate
 RUN npm run build
+RUN mkdir -p dist/docs && cp src/docs/swagger.yaml dist/docs/swagger.yaml
 
-# ============================
-# 🚀 Etapa 2: Runtime
-# ============================
 FROM node:20-alpine AS runner
-
 WORKDIR /app
-
-# Solo copiar lo necesario del build
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/prisma ./prisma
-
-# Variables de entorno
 ENV NODE_ENV=production
 ENV PORT=3000
-
-# Exponer puerto
 EXPOSE 3000
-
-# Comando de inicio
-CMD ["node", "dist/main.js"]
+CMD ["node", "dist/app.js"]
